# auto_shop_parsers_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  constants.py  docker-compose.yml  example.txt  example.xlsx  main.py  markups.py  pyproject.toml  requirements.txt  requrements.txt  settings.py.default  text_of_buttons.py  utils.py
buttons/: buttons.py  text_of_buttons.py
constants/: constants.py  list_vendor_codes_constants.py  reports_constants.py  size_constants.py
handlers/: commands.py  main_menu.py  parsers.py  urls.py  utils.py  vendor_codes.py
handlers/reports/: __init__.py  download.py  reports.py  urls.py  utils.py
handlers/vendor_codes/: __init__.py  list_vendor_codes.py  mm_vendor_codes.py  results_by_all_vendor_codes.py  results_by_vendor_code.py  utils.py  vendor_codes.py
markups/: markups.py  utils.py
