[tool.poetry]
name = "auto-shop-parsers-bot"
version = "0.1.0"
description = "auto_shop_parsers_bot"
authors = ["demidos <sasha-demidkin@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.14.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
